--- a/Capstone 2 Pre-processing.ipynb
+++ b/Capstone 2 Pre-processing.ipynb
@@ -296,7 +296,7 @@
    "source": [
     "I'm going to delete some columns since I'm about to make a lot of new ones with one-hot encoding the categorical data. I've narrowed down what I'm looking at overall: where the accident occured (region) and the main and secondary causes.\n",
     "\n",
-    "Columns to be deleted: EventType (all ACC), City, State, Country, Mode (all aviation), originalPublishedDate (date the report was published), ProbableCause (covered by main and secondary causes), Findings_supp, and all Findings_main except main1."
+    "Columns to be deleted: EventType (all ACC), Mode (all aviation), originalPublishedDate (date the report was published), ProbableCause (covered by main and secondary causes), Findings_supp, and all Findings_main except main1."
    ]
   },
   {
@@ -309,7 +309,6 @@
     "df = df.drop(['EventType', 'Mode', 'OriginalPublishedDate', 'ProbableCause', 'Findings_supp'], axis = 1)\n",
     "df = df.drop(['Findings_main2', 'Findings_main3', 'Findings_main4', 'Findings_main5', 'Findings_main6'], axis = 1)\n",
     "df.rename(columns = {'Findings_main1':'Failure_Category'}, inplace = True)\n",
-    "df.rename(columns = {'Findings_main1':'Failure_Cause'}, inplace = True)\n",
     "df = df.sort_values('EventDate', ignore_index = True)"
    ]
   },
@@ -1619,6 +1618,14 @@
     "scaler = MinMaxScaler()\n",
     "y_train_sc = scaler.fit_transform(y_train)\n",
     "y_test_sc = scaler.transform(y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7bf6b838",
+   "metadata": {},
+   "source": [
+    "Next Steps: need to ask about saving dataframes that are split into train/test sections. Then Modeling is the next step."
    ]
   }
  ],
