done for the night

--- a/Capstone 2 Pre-processing.ipynb
+++ b/Capstone 2 Pre-processing.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "d676d089",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "77acff67",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,6 @@
        "      <th>HasSafetyRec</th>\n",
        "      <th>Mode</th>\n",
        "      <th>...</th>\n",
-       "      <th>FAR Part</th>\n",
        "      <th>Findings_supp</th>\n",
        "      <th>Findings_main1</th>\n",
        "      <th>Findings_main2</th>\n",
@@ -77,6 +76,7 @@
        "      <th>Findings_main5</th>\n",
        "      <th>Findings_main6</th>\n",
        "      <th>Region</th>\n",
+       "      <th>EventMonth</th>\n",
        "      <th>SecondaryCause</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -94,7 +94,6 @@
        "      <td>False</td>\n",
        "      <td>Aviation</td>\n",
        "      <td>...</td>\n",
-       "      <td>135</td>\n",
        "      <td>Personnel issues - Task performance - Mainten...</td>\n",
        "      <td>Aircraft</td>\n",
        "      <td>Aircraft structures</td>\n",
@@ -102,7 +101,8 @@
        "      <td>Cargo/baggage doors</td>\n",
        "      <td>Incorrect service/maintenance</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Pacific West</td>\n",
+       "      <td>Pacific</td>\n",
+       "      <td>1</td>\n",
        "      <td>Air_Maintenance Issue</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -118,7 +118,6 @@
        "      <td>False</td>\n",
        "      <td>Aviation</td>\n",
        "      <td>...</td>\n",
-       "      <td>135</td>\n",
        "      <td>Personnel issues - Action/decision - Info pro...</td>\n",
        "      <td>Environmental issues</td>\n",
        "      <td>Physical environment</td>\n",
@@ -126,7 +125,8 @@
        "      <td>Snow/slush/ice covered surface</td>\n",
        "      <td>Not specified</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Pacific West</td>\n",
+       "      <td>Pacific</td>\n",
+       "      <td>1</td>\n",
        "      <td>Env_Runway</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -142,7 +142,6 @@
        "      <td>False</td>\n",
        "      <td>Aviation</td>\n",
        "      <td>...</td>\n",
-       "      <td>135</td>\n",
        "      <td>Environmental issues - Physical environment -...</td>\n",
        "      <td>Environmental issues</td>\n",
        "      <td>Conditions/weather/phenomena</td>\n",
@@ -150,7 +149,8 @@
        "      <td>Flat light</td>\n",
        "      <td>Effect on personnel</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Pacific West</td>\n",
+       "      <td>Pacific</td>\n",
+       "      <td>4</td>\n",
        "      <td>Env_Lighting/Visibility</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -166,7 +166,6 @@
        "      <td>False</td>\n",
        "      <td>Aviation</td>\n",
        "      <td>...</td>\n",
-       "      <td>135</td>\n",
        "      <td>Personnel issues - Action/decision - Info pro...</td>\n",
        "      <td>Environmental issues</td>\n",
        "      <td>Physical environment</td>\n",
@@ -174,7 +173,8 @@
        "      <td>Ground vehicle</td>\n",
        "      <td>Contributed to outcome</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Pacific West</td>\n",
+       "      <td>Pacific</td>\n",
+       "      <td>4</td>\n",
        "      <td>Env_Object/Animal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -190,7 +190,6 @@
        "      <td>False</td>\n",
        "      <td>Aviation</td>\n",
        "      <td>...</td>\n",
-       "      <td>135</td>\n",
        "      <td>Personnel issues - Action/decision - Info pro...</td>\n",
        "      <td>Environmental issues</td>\n",
        "      <td>Physical environment</td>\n",
@@ -198,12 +197,13 @@
        "      <td>Snow/slush/ice covered surface</td>\n",
        "      <td>Not specified</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Pacific West</td>\n",
+       "      <td>Pacific</td>\n",
+       "      <td>4</td>\n",
        "      <td>Env_Runway</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 26 columns</p>\n",
+       "<p>5 rows × 27 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -214,12 +214,12 @@
        "3  ANC08FA050       ACC  67801  2008-04-09T15:30:00Z   Unalaska  Alaska   \n",
        "4  ANC08CA065       ACC  68340  2008-04-28T13:30:00Z  Talkeetna  Alaska   \n",
        "\n",
-       "         Country      N#  HasSafetyRec      Mode  ... FAR Part  \\\n",
-       "0  United States  N509FN         False  Aviation  ...      135   \n",
-       "1  United States  N454SF         False  Aviation  ...      135   \n",
-       "2  United States  N8327S         False  Aviation  ...      135   \n",
-       "3  United States    N741         False  Aviation  ...      135   \n",
-       "4  United States  N565TA         False  Aviation  ...      135   \n",
+       "         Country      N#  HasSafetyRec      Mode  ...  \\\n",
+       "0  United States  N509FN         False  Aviation  ...   \n",
+       "1  United States  N454SF         False  Aviation  ...   \n",
+       "2  United States  N8327S         False  Aviation  ...   \n",
+       "3  United States    N741         False  Aviation  ...   \n",
+       "4  United States  N565TA         False  Aviation  ...   \n",
        "\n",
        "                                       Findings_supp         Findings_main1  \\\n",
        "0   Personnel issues - Task performance - Mainten...              Aircraft    \n",
@@ -242,17 +242,17 @@
        "3                   Ground vehicle           Contributed to outcome   \n",
        "4   Snow/slush/ice covered surface                    Not specified   \n",
        "\n",
-       "  Findings_main6        Region           SecondaryCause  \n",
-       "0            NaN  Pacific West    Air_Maintenance Issue  \n",
-       "1            NaN  Pacific West               Env_Runway  \n",
-       "2            NaN  Pacific West  Env_Lighting/Visibility  \n",
-       "3            NaN  Pacific West        Env_Object/Animal  \n",
-       "4            NaN  Pacific West               Env_Runway  \n",
+       "   Findings_main6   Region EventMonth           SecondaryCause  \n",
+       "0             NaN  Pacific          1    Air_Maintenance Issue  \n",
+       "1             NaN  Pacific          1               Env_Runway  \n",
+       "2             NaN  Pacific          4  Env_Lighting/Visibility  \n",
+       "3             NaN  Pacific          4        Env_Object/Animal  \n",
+       "4             NaN  Pacific          4               Env_Runway  \n",
        "\n",
-       "[5 rows x 26 columns]"
+       "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
    "id": "7568be62",
    "metadata": {},
    "source": [
-    "I'm going to delete some columns since I'm about to make a lot of new ones with one-hot encoding the categorical data. I've narrowed down what I'm looking at overall: where the accident occured (region) and the main and secondary causes.\n",
+    "I'm going to delete some columns since I'm about to make a lot of new ones with one-hot encoding the categorical data. I've narrowed down what I'm looking at overall: where the accident occured (region) and the main cause, the month and the injury counts. Will also keep FAR part to see if a specific category of aircraft makes a difference.\n",
     "\n",
     "Columns to be deleted: EventType (all ACC), Mode (all aviation), originalPublishedDate (date the report was published), ProbableCause (covered by main and secondary causes), Findings_supp, and all Findings_main except main1."
    ]
