--- a/Capstone 2 Pre-processing.ipynb
+++ b/Capstone 2 Pre-processing.ipynb
@@ -1065,27 +1065,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "id": "3d34244a",
    "metadata": {},
    "outputs": [],
    "source": [
     "#The five Accident categories are going to be our dependent variable\n",
     "X = df.drop(['Failure_Category_Aircraft ', 'Failure_Category_Environmental issues ', 'Failure_Category_Not determined ', 'Failure_Category_Organizational issues ', 'Failure_Category_Personnel issues '], axis = 1)\n",
-    "X_names= X.columns\n",
+    "X_names= X.columns.values.tolist()\n",
     "y = df[['Failure_Category_Aircraft ', 'Failure_Category_Environmental issues ', 'Failure_Category_Not determined ', 'Failure_Category_Organizational issues ', 'Failure_Category_Personnel issues ']]\n",
-    "y_names = y.columns"
+    "y_names = y.columns.values.tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "id": "930dabdd",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X.values, y.values, test_size = 0.3, random_state = 42)"
+    "X_train_a, X_test_a, y_train_a, y_test_a = train_test_split(X.values, y.values, test_size = 0.3, random_state = 42)"
    ]
   },
   {
@@ -1100,36 +1100,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "id": "aa911a77",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'numpy.ndarray' object has no attribute 'loc'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_1692/2414464381.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpreprocessing\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mMinMaxScaler\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mscaler\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mMinMaxScaler\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mX_train_sc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mscaler\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mX_test_sc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mscaler\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'loc'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.preprocessing import MinMaxScaler\n",
     "scaler = MinMaxScaler()\n",
-    "X_train_sc = scaler.fit_transform(X_train.loc[:,[2,3,4]])\n",
-    "X_test_sc = scaler.transform(X_test.loc[:,[2,3,4]])"
+    "X_train_a[:,[2,3,4]] = scaler.fit_transform(X_train_a[:,[2,3,4]])\n",
+    "X_test_a[:,[2,3,4]] = scaler.transform(X_test_a[:,[2,3,4]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "31140c07",
+   "execution_count": 30,
+   "id": "548654bf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Changing the column names stored in X_names to show that the injury count columns are scaled values\n",
+    "X_names[2:5] = 'Scaled_FatalInjuryCount', 'Scaled_SeriousInjuryCount', 'Scaled_MinorInjuryCount'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "166ec9fd",
+   "metadata": {},
+   "source": [
+    "**Final Step**\n",
+    "\n",
+    "Changing the arrays back to DataFrames with column names for processing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "c893071c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = pd.DataFrame(X_train_a, columns = X_names)\n",
+    "X_test = pd.DataFrame(X_test_a, columns = X_names)\n",
+    "y_train = pd.DataFrame(y_train_a, columns = y_names)\n",
+    "y_test = pd.DataFrame(y_test_a, columns = y_names)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95df4c30",
+   "metadata": {},
+   "source": [
+    "Now need to store in csv file for use in the next notebook, which will be for the modeling step"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "9779424c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train.to_excel('data/X_train.xlsx', index = False)\n",
+    "X_test.to_excel('data/X_test.xlsx', index = False)\n",
+    "y_train.to_excel('data/y_train.xlsx', index = False)\n",
+    "y_test.to_excel('data/y_test.xlsx', index = False)"
+   ]
   }
  ],
  "metadata": {
