correcting error with missin value

--- a/Capstone 2 Pre-processing.ipynb
+++ b/Capstone 2 Pre-processing.ipynb
@@ -1056,6 +1056,229 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "74b8a763",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Mkey                                       0\n",
+       "HasSafetyRec                               0\n",
+       "FatalInjuryCount                           1\n",
+       "SeriousInjuryCount                         1\n",
+       "MinorInjuryCount                           1\n",
+       "EventMonth                                 0\n",
+       "Region_Caribbean                           0\n",
+       "Region_EastNorthCentral                    0\n",
+       "Region_EastSouthCentral                    0\n",
+       "Region_MiddleAtlantic                      0\n",
+       "Region_Mountain                            0\n",
+       "Region_NewEngland                          0\n",
+       "Region_Other                               0\n",
+       "Region_Pacific                             0\n",
+       "Region_PacificOcean                        0\n",
+       "Region_SouthAtlantic                       0\n",
+       "Region_WestNorthCentral                    0\n",
+       "Region_WestSouthCentral                    0\n",
+       "FAR Part_121                               0\n",
+       "FAR Part_135                               0\n",
+       "HighestInjuryLevel_Fatal                   0\n",
+       "HighestInjuryLevel_Minor                   0\n",
+       "HighestInjuryLevel_None                    0\n",
+       "HighestInjuryLevel_Serious                 0\n",
+       "Failure_Category_Aircraft                  0\n",
+       "Failure_Category_Environmental issues      0\n",
+       "Failure_Category_Not determined            0\n",
+       "Failure_Category_Organizational issues     0\n",
+       "Failure_Category_Personnel issues          0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#one more check for any missing values\n",
+    "df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "8a7d09ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mkey</th>\n",
+       "      <th>HasSafetyRec</th>\n",
+       "      <th>FatalInjuryCount</th>\n",
+       "      <th>SeriousInjuryCount</th>\n",
+       "      <th>MinorInjuryCount</th>\n",
+       "      <th>EventMonth</th>\n",
+       "      <th>Region_Caribbean</th>\n",
+       "      <th>Region_EastNorthCentral</th>\n",
+       "      <th>Region_EastSouthCentral</th>\n",
+       "      <th>Region_MiddleAtlantic</th>\n",
+       "      <th>...</th>\n",
+       "      <th>FAR Part_135</th>\n",
+       "      <th>HighestInjuryLevel_Fatal</th>\n",
+       "      <th>HighestInjuryLevel_Minor</th>\n",
+       "      <th>HighestInjuryLevel_None</th>\n",
+       "      <th>HighestInjuryLevel_Serious</th>\n",
+       "      <th>Failure_Category_Aircraft</th>\n",
+       "      <th>Failure_Category_Environmental issues</th>\n",
+       "      <th>Failure_Category_Not determined</th>\n",
+       "      <th>Failure_Category_Organizational issues</th>\n",
+       "      <th>Failure_Category_Personnel issues</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>651</th>\n",
+       "      <td>99521</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 29 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Mkey  HasSafetyRec  FatalInjuryCount  SeriousInjuryCount  \\\n",
+       "651  99521         False               NaN                 NaN   \n",
+       "\n",
+       "     MinorInjuryCount  EventMonth  Region_Caribbean  Region_EastNorthCentral  \\\n",
+       "651               NaN           5                 0                        0   \n",
+       "\n",
+       "     Region_EastSouthCentral  Region_MiddleAtlantic  ...  FAR Part_135  \\\n",
+       "651                        0                      0  ...             0   \n",
+       "\n",
+       "     HighestInjuryLevel_Fatal  HighestInjuryLevel_Minor  \\\n",
+       "651                         0                         0   \n",
+       "\n",
+       "     HighestInjuryLevel_None  HighestInjuryLevel_Serious  \\\n",
+       "651                        0                           0   \n",
+       "\n",
+       "     Failure_Category_Aircraft   Failure_Category_Environmental issues   \\\n",
+       "651                           0                                       1   \n",
+       "\n",
+       "     Failure_Category_Not determined   \\\n",
+       "651                                 0   \n",
+       "\n",
+       "     Failure_Category_Organizational issues   \\\n",
+       "651                                        0   \n",
+       "\n",
+       "     Failure_Category_Personnel issues   \n",
+       "651                                   0  \n",
+       "\n",
+       "[1 rows x 29 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['FatalInjuryCount'].isna() == True]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "e52d0a89",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Mkey                                       0\n",
+       "HasSafetyRec                               0\n",
+       "FatalInjuryCount                           0\n",
+       "SeriousInjuryCount                         0\n",
+       "MinorInjuryCount                           0\n",
+       "EventMonth                                 0\n",
+       "Region_Caribbean                           0\n",
+       "Region_EastNorthCentral                    0\n",
+       "Region_EastSouthCentral                    0\n",
+       "Region_MiddleAtlantic                      0\n",
+       "Region_Mountain                            0\n",
+       "Region_NewEngland                          0\n",
+       "Region_Other                               0\n",
+       "Region_Pacific                             0\n",
+       "Region_PacificOcean                        0\n",
+       "Region_SouthAtlantic                       0\n",
+       "Region_WestNorthCentral                    0\n",
+       "Region_WestSouthCentral                    0\n",
+       "FAR Part_121                               0\n",
+       "FAR Part_135                               0\n",
+       "HighestInjuryLevel_Fatal                   0\n",
+       "HighestInjuryLevel_Minor                   0\n",
+       "HighestInjuryLevel_None                    0\n",
+       "HighestInjuryLevel_Serious                 0\n",
+       "Failure_Category_Aircraft                  0\n",
+       "Failure_Category_Environmental issues      0\n",
+       "Failure_Category_Not determined            0\n",
+       "Failure_Category_Organizational issues     0\n",
+       "Failure_Category_Personnel issues          0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Looks likw all the missing values are in one line, so going to delete that line\n",
+    "df = df.drop(labels = [651], axis = 0)\n",
+    "df.isna().sum()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a8c1fc77",
    "metadata": {},
@@ -1065,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "3d34244a",
    "metadata": {},
    "outputs": [],
@@ -1079,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "id": "930dabdd",
    "metadata": {},
    "outputs": [],
@@ -1100,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "id": "aa911a77",
    "metadata": {},
    "outputs": [],
@@ -1113,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "id": "548654bf",
    "metadata": {},
    "outputs": [],
@@ -1134,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "id": "c893071c",
    "metadata": {},
    "outputs": [],
@@ -1155,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "id": "9779424c",
    "metadata": {},
    "outputs": [],
