Combined two categories for better class balance

--- a/Capstone 2 EDA.ipynb
+++ b/Capstone 2 EDA.ipynb
@@ -659,7 +659,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ashle\\AppData\\Local\\Temp/ipykernel_20940/2097883723.py:5: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\ashle\\AppData\\Local\\Temp/ipykernel_16260/2097883723.py:5: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_xticklabels(acc_inj['Accident Cause'], rotation = 90)\n"
      ]
     },
@@ -5252,6 +5252,60 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1d14d3a4",
+   "metadata": {},
+   "source": [
+    "**Class Imbalance**\n",
+    "\n",
+    "Aircraft, Environmental and Personnel all have much larger values than Not Determined and Organixation Issues only has 4 incidents total. To keep from having a huge class imbalance problem, I'm going to combine Not Determined and Org issues into an 'Other' category."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "e7790d45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Findings_main1'] = df['Findings_main1'].replace('Not determined ', 'Other')\n",
+    "df['Findings_main1'] = df['Findings_main1'].replace('Organizational issues ', 'Other')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "c730c091",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Personnel issues         310\n",
+       "Aircraft                 212\n",
+       "Environmental issues     193\n",
+       "Other                     21\n",
+       "Name: Findings_main1, dtype: int64"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.Findings_main1.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3e5dd9f",
+   "metadata": {},
+   "source": [
+    "The 'Other' category is still ~7-10% of the size of the other three categories. But that is much better than the ~1% that Org Issues was before."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6cfb953e",
    "metadata": {},
    "source": [
@@ -5262,7 +5316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 60,
    "id": "96aed626",
    "metadata": {},
    "outputs": [],
