updated categories and class weights

--- a/Capstone 2 EDA.ipynb
+++ b/Capstone 2 EDA.ipynb
@@ -659,7 +659,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ashle\\AppData\\Local\\Temp/ipykernel_16260/2097883723.py:5: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\ashle\\AppData\\Local\\Temp/ipykernel_25460/2097883723.py:5: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_xticklabels(acc_inj['Accident Cause'], rotation = 90)\n"
      ]
     },
@@ -5267,13 +5267,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['Findings_main1'] = df['Findings_main1'].replace('Not determined ', 'Other')\n",
-    "df['Findings_main1'] = df['Findings_main1'].replace('Organizational issues ', 'Other')"
+    "df_new['Findings_main1'] = df_new['Findings_main1'].replace('Not determined ', 'Other')\n",
+    "df_new['Findings_main1'] = df_new['Findings_main1'].replace('Organizational issues ', 'Other')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 61,
    "id": "c730c091",
    "metadata": {},
    "outputs": [
@@ -5287,13 +5287,13 @@
        "Name: Findings_main1, dtype: int64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.Findings_main1.value_counts()"
+    "df_new.Findings_main1.value_counts()"
    ]
   },
   {
@@ -5316,7 +5316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 62,
    "id": "96aed626",
    "metadata": {},
    "outputs": [],
